Menu: Fix a compiler error in Java 8 (Collection.getFirst)